# library_app

./: pyproject.toml
api/: urls.py
api/books/: models.py  permissions.py  serializers.py  views.py
api/books/migrations/: 0006_alter_book_user_alter_comment_book_and_more.py
api/users/: models.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
